got tiles all done

--- a/designs-site/index.html
+++ b/designs-site/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="designs.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="theme-color" content="#000000">
-	<title>SlamDesignz - Ahmed Islam's Online Portfolio</title>
+	<title>George Belanger's Online Portfolio</title>
 </head>
 
 <body>
