animation is working and positioned

--- a/designs-site/index.html
+++ b/designs-site/index.html
@@ -40,8 +40,14 @@
 		</g> -->
 		
 		<div id="three-container"></div>
+		<div style='position:fixed; left: 50%; transform: translateX(-50%); top:55%; font-size:20px; font-family:Verdana; max-width:600px; '>
+			I am a software engineer with 2 years of experience using React, Lambda and PHP. I have a passion for reading and having a wide T. 
+		</div>
+		<button style='position:fixed; left: 50%; transform: translateX(-50%); top:75%; font-size:30px; border:4px solid lightblue; color:lightblue; padding:20px; border-radius:10px; background-color:black;' >
+			See projects
+		</button>
 		</svg>
-	</div>
+	</button>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r75/three.min.js'></script>
 	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/TextGeometry.js'></script>
 	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/FontUtils.js'></script>
