--- a/designs-site/index.html
+++ b/designs-site/index.html
@@ -48,14 +48,17 @@
 		</button>
 		</svg>
 	</button>
+	<!-- <script src='js/three.min.js'></script> -->
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r75/three.min.js'></script>
-	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/TextGeometry.js'></script>
-	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/FontUtils.js'></script>
-	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/pnltri.min.js'></script>
-	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/droid_sans_bold.typeface.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
-	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/bas.js'></script>
-	<script src="designs.js"></script>
+	<script src='js/TextGeometry.js'></script>
+	<script src='js/pnltri.min.js'></script>
+	<script src='js/FontUtils.js'></script>
+	<!-- <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/FontUtils.js'></script> -->
+
+	<script src='js/droid_sans_bold.typeface.js'></script>
+	<script src='js/TweenMax.min.js'></script>
+	<script src='js/bas.js'></script>
+	<script src="js/designs.js"></script>
 	<script>
 		THREE.ShapeUtils.triangulateShape = (function () {
 				var pnlTriangulator = new PNLTRI.Triangulator();
