finished constant and sperrys

--- a/designs-site/index.html
+++ b/designs-site/index.html
@@ -41,7 +41,7 @@
 		
 		<div id="three-container"></div>
 		<div style='position:fixed; left: 50%; transform: translateX(-50%); top:55%; font-size:20px; font-family:Verdana; max-width:600px; '>
-			I am a software engineer with 2 years of experience using React, Lambda and PHP. I have a passion for reading and having a wide T. 
+			Clean, Smart and Effective code is essential principle for me and it is a part from my creed. 
 		</div>
 		<button style='position:fixed; left: 50%; transform: translateX(-50%); top:75%; font-size:30px; border:4px solid lightblue; color:lightblue; padding:20px; border-radius:10px; background-color:black;' >
 			See projects
