made the pics show up in mobile

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 		</g> -->
 		
 		<div id="three-container"></div>
-		<div style='position:fixed; left: 50%; transform: translateX(-50%); top:55%; font-size:20px; font-family:Verdana; max-width:600px; '>
+		<div style='position:fixed; left: 50%; transform: translateX(-50%); top:45%; font-size:20px; font-family:Verdana; '>
 			I am a full-stack software developer that specializes in React and AWS Lambda. I write clean, simple code and want to learn from the best across all industries. 
 		</div>
-		<button style='position:fixed; left: 50%; transform: translateX(-50%); top:75%; font-size:30px; border:4px solid lightblue; color:lightblue; padding:20px; border-radius:10px; background-color:black;' >
+		<button style='position:fixed; left: 50%; transform: translateX(-50%); top:80%; font-size:30px; border:4px solid lightblue; color:lightblue; padding:20px; border-radius:10px; background-color:black;' >
 			See projects
 		</button>
 		</svg>
