made blurb mobile friendly

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</g> -->
 		
 		<div id="three-container"></div>
-		<div style='position:fixed; left: 50%; transform: translateX(-50%); top:45%; font-size:20px; font-family:Verdana; '>
+		<div id='blurb-container'>
 			I am a full-stack software engineer that specializes in React and AWS Lambda. I write code that's clear over clever and simple over complex. I enjoy learning about a wide range of subjects from investing to psychology. 
 		</div>
 		<button style='position:fixed; left: 50%; transform: translateX(-50%); top:80%; font-size:30px; border:4px solid lightblue; color:lightblue; padding:20px; border-radius:10px; background-color:black;' >
