attempting a horizontal scroll

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 	<script src='js/TweenMax.min.js'></script>
 	<script src='js/bas.js'></script>
 	<script src="js/designs.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="/js/jquery.mousewheel.js"></script>
 	<script>
 		THREE.ShapeUtils.triangulateShape = (function () {
 				var pnlTriangulator = new PNLTRI.Triangulator();
@@ -67,6 +69,14 @@
 					return pnlTriangulator.triangulate_polygon([contour].concat(holes));
 				};
 			})();
+	</script>
+	<script>
+		$(function() {
+			$("body").mousewheel(function(evt, chg) {
+				this.scrollLeft -= (chg * 50); //need a value to speed up the change
+				evt.preventDefault();
+			});
+		});
 	</script>
 	
 	
